--- a/module_6/M6_NB2_Privacy_by_Design.ipynb
+++ b/module_6/M6_NB2_Privacy_by_Design.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div align=\"right\">Python 2.7 Jupyter Notebook</div>\n",
+    "<div align=\"right\">Python 3.6 Jupyter Notebook</div>\n",
     "\n",
     "# Privacy by design: Big data and personal data protection \n",
     "\n",
@@ -118,9 +118,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import pandas\n",
@@ -128,7 +126,8 @@
     "# Load the data set.\n",
     "df = pandas.read_csv('privacy/belgium_100k.csv')\n",
     "df = df.where((pandas.notnull(df)), None)\n",
-    "df['birthday'] = df['birthday'].astype('datetime64')\n",
+    "#df['birthday'] = df['birthday'].astype('datetime64')\n",
+    "df['birthday'] = df['birthday'].astype('datetime64[ns]')\n",
     "df.head()"
    ]
   },
@@ -150,7 +149,7 @@
    "source": [
     "# Define function to evaluate uniqueness of the provided dataset.\n",
     "def uniqueness(dataframe, pseudo):\n",
-    "    groups = dataframe.groupby(pseudo).groups.values()\n",
+    "    groups = list(dataframe.groupby(pseudo).groups.values())\n",
     "    return sum(1. for g in groups if len(g) == 1) / len(dataframe)"
    ]
   },
@@ -158,14 +157,13 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
    "source": [
-    "print uniqueness(df, ['zip'])\n",
-    "print uniqueness(df, ['sex', 'birthday'])\n",
-    "print uniqueness(df, ['sex', 'birthday', 'zip'])"
+    "print((uniqueness(df, ['zip'])))\n",
+    "print((uniqueness(df, ['sex', 'birthday'])))\n",
+    "print((uniqueness(df, ['sex', 'birthday', 'zip'])))"
    ]
   },
   {
@@ -199,12 +197,10 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print k_anonymity(df, ['sex', 'birthday', 'zip'])"
+    "print((k_anonymity(df, ['sex', 'birthday', 'zip'])))"
    ]
   },
   {
@@ -219,14 +215,14 @@
     "\n",
     "> You can experiment with different combinations of features, or repeat the test with single features, to review the impact on the produced result.\n",
     "\n",
-    "> **Example:** `print k_anonymity(df, ['sex'])`"
+    "> **Example:** `print(k_anonymity(df, ['sex']))`"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -247,13 +243,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Reduce the zip code to zip district.\n",
-    "df['zip_district'] = map(lambda z: z / 1000, df['zip'])\n",
+    "df['zip_district'] = [z / 1000 for z in df['zip']]\n",
     "df[['zip', 'zip_district']].head(3)"
    ]
   },
@@ -268,9 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# From birthday to birth year.\n",
@@ -289,9 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# From birthday to birth decade.\n",
@@ -310,16 +300,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "print k_anonymity(df, ['sex', 'birth_year', 'zip_district'])\n",
+    "print((k_anonymity(df, ['sex', 'birth_year', 'zip_district'])))\n",
     "grouped = df.groupby(['sex', 'birth_year', 'zip_district'])\n",
     "df_filtered = grouped.filter(lambda x: len(x) > 5)\n",
-    "print 'Reducing size:', len(df), '> ', len(df_filtered)\n",
-    "print 'K-anonymity after suppression:', k_anonymity(df_filtered, ['sex', 'birth_year', 'zip_district'])"
+    "print(('Reducing size:', len(df), '> ', len(df_filtered)))\n",
+    "print(('K-anonymity after suppression:', k_anonymity(df_filtered, ['sex', 'birth_year', 'zip_district'])))"
    ]
   },
   {
@@ -398,9 +386,9 @@
     "def iterate_unicity(samples, points=4, iterations=10):\n",
     "    '''IN:int, int, int'''    \n",
     "    unicities = []\n",
-    "    for _ in tqdm(range(iterations)):\n",
+    "    for _ in tqdm(list(range(iterations))):\n",
     "        unicities.append(compute_unicity(samples, points))\n",
-    "    \n",
+    "        \n",
     "    return np.mean(unicities)\n",
     "    "
    ]
@@ -417,9 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load required libraries and methods.\n",
@@ -434,14 +420,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Load samples of the data set.\n",
     "samples = pd.read_csv('privacy/mobility_sample_1k.csv', index_col='datetime')\n",
-    "samples.index = samples.index.astype('datetime64')\n",
+    "samples.index = samples.index.astype('datetime64[ns]')\n",
     "samples.head(3)"
    ]
   },
@@ -459,9 +443,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Compute unicity.\n",
@@ -552,7 +534,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -561,7 +543,8 @@
     "antennas.set_index('ins', inplace=True)\n",
     "\n",
     "cluster_10 = pd.read_csv('privacy/clusters_10.csv')\n",
-    "cluster_10['ins'] = map(int, cluster_10['ins'])\n",
+    "#cluster_10['ins'] = map(int, cluster_10['ins'])\n",
+    "cluster_10['ins'] = list(map(int, cluster_10['ins']))\n",
     "mapping = dict(cluster_10[['ins', 'cluster']].values)"
    ]
   },
@@ -569,11 +552,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "scrolled": false
    },
    "outputs": [],
    "source": [
     "# Reduce the grain of the data set.\n",
+    "# Requires Numpy version 1.11.\n",
     "samples_10 = samples.copy()\n",
     "samples_10 = samples_10.applymap(lambda k: np.nan if np.isnan(k) else mapping[antennas.index[k]])"
    ]
@@ -599,7 +583,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -728,23 +712,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [Root]",
+   "display_name": "Python [default]",
    "language": "python",
-   "name": "Python [Root]"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
